@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - ``COPY FROM``: imports from S3 will now retry the import in case of a read
+   timeout.
+
  - Added the ``concat`` scalar function and the concat operator ``||``.
 
  - Updated Elasticsearch to 1.5.2
